fix: enable centering and wrapping for better responsiveness

--- a/slideshowpure.css
+++ b/slideshowpure.css
@@ -381,6 +381,7 @@
   display: flex;
   gap: 5px;
   align-items: center;
+  justify-content: center;
   position: absolute;
   top: calc(50% + 4vh);
   left: 4vw;
@@ -388,6 +389,7 @@
   color: #fff;
   font-family: "Archivo Narrow", sans-serif;
   z-index: 5;
+  flex-wrap: wrap;
 }
 
 .button-container {
